--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -17,6 +17,6 @@ spec:
     spec:
       containers:
       - name: devops-demo
-        image: sibasish934/devops-demo:v20250701041710
+        image: laphtrahddis/devops-demo:v20250701041710
         ports:
         - containerPort: 80
